# chrono-atlas

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/hooks/: copilot-icq.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/data/: historical_places.csv
backend/src/api/: main.py
backend/src/api/routes/: events.py
backend/src/models/: event.py
backend/src/services/: events.py  fiction.py  geocoding.py  wikipedia.py
backend/tests/: conftest.py
backend/tests/integration/: test_events_api.py
backend/tests/unit/: test_fiction.py  test_geocoding.py  test_wikipedia.py
documents/: architecture.md  deployment-prerequisites.md  plan.md  security-review.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  staticwebapp.config.json  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  test-utils.ts
frontend/src/components/CosmicCanvas/: CosmicCanvas.tsx
frontend/src/components/DatePicker/: DatePicker.test.tsx  DatePicker.tsx
frontend/src/components/EventDetail/: EventDetail.test.tsx  EventDetail.tsx
frontend/src/components/Map/: ChronoMap.tsx
frontend/src/hooks/: useEvents.ts  usePrefetchAdjacentDates.ts
frontend/src/pages/: About.tsx  aboutContent.ts
frontend/src/services/: api.ts
frontend/src/types/: event.ts
infra/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
memory/: constitution.md
