[project]
name = "chrono-atlas-backend"
version = "0.1.0"
description = "Chrono Atlas backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128,<0.133",
    "uvicorn[standard]>=0.40,<0.42",
    "pydantic>=2.10,<3",
    "httpx>=0.28,<0.29",
    "structlog>=25.5,<26",
    "motor>=3.7,<4",
    "redis[hiredis]>=7.1,<8",
    "spacy>=3.8,<3.9",
    "opentelemetry-api>=1.39,<2",
    "opentelemetry-sdk>=1.39,<2",
    "opentelemetry-instrumentation-fastapi>=0.60b1,<1",
    "azure-identity>=1.25,<2",
    "azure-ai-inference>=1.0.0b9,<2",
    "slowapi>=0.1.9,<0.2",
    "cachetools>=7.0,<8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff",
    "mypy",
    "respx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
